--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ h4 {
   line-height: 40px;
   width:100%;
   margin: 0 auto;
+  display: inline-block;
 }
 
 hr {
@@ -72,7 +73,7 @@ a:active {
 
 #topbar {
   width:100%;
-  height: 120px;
+  height: 80px;
   background-color: #000;
   background-repeat: repeat;
   background-image: url("../images/bg.png");
@@ -81,7 +82,7 @@ a:active {
 
 #logo {
   position:absolute;
-  height: 100px;
+  height: 60px;
   display: inline-block;
 }
 
@@ -102,8 +103,10 @@ a:active {
   text-decoration: none;
   float:right;
   min-width: 80px;
-  height: calc(100% - 62px);
+  height: calc(100% - 22px);
   padding: 30px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .nav-link:hover {
@@ -124,13 +127,14 @@ a:active {
   margin-top: 2%;
   margin-bottom: 2%;
   padding: 10px;
-  background: #444;
+  background: rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   box-shadow: #111 0px 0px 5px 2px;
+  text-align: center;
 }
 
 .contentDiv:not(#checklistDiv) {
-  height: 75%;
+  height: 80%;
   position: absolute;
   width: 95%;
 }
@@ -160,16 +164,27 @@ img:after {
   border-radius: 4px;
   border: 2px solid #333;
   height: 40px;
+  position: relative;
 }
 
 #frontbar {
   background: repeating-linear-gradient(
-  -55deg,
+  -45deg,
   #666,
   #666 10px,
   #888 10px,
   #888 20px
   );
   border-radius: 4px;
-  height: 100%;
+  height: 40px;
+  position: absolute;
+}
+
+#checklist {
+  text-align: center;
+  background: #444;
+  border: 2px solid #222;
+  display: inline-block;
+  padding: 5px;
+  margin: 0 auto;
 }
